# AutomaticLightsExample

./: ALGORITHM_EXPLANATION.md  AutomaticLightsSharedStates.dzn  CMakeLists.txt  ConfigComponent.cc  ConfigComponent.hh  FrontCameraComponent.cc  FrontCameraComponent.hh  LightSensorComponent.cc  LightSensorComponent.hh  Loop.cpp  Loop.hh  README.md  TimerAutomaticLightComponent.cc  TimerAutomaticLightComponent.hh  TimerComponent.cpp  TimerComponent.hh  UpdateLoopComponent.cpp  UpdateLoopComponent.hh  build_script.bat  build_script.py  build_script.sh  config.json  main.cpp  verify_models.bat  verify_models.py  verify_models.sh
Models/: AutomaticLights.dzn  ExternalTypes.dzn  FrontCamera.dzn  LightSensor.dzn  LightShifter.dzn  TimerAutomaticLight.dzn
Models/FrontCamera/: FrontCamera.dzn  FrontCameraSkel.dzn
Models/HighBeamsRelay/: HighBeamsRelay.dzn
Models/LightSensor/: LightSensor.dzn
Models/Utils/: ExternalTypes.dzn  Module.dzn
Models/Utils/Config/: Config.dzn  ConfigSkel.dzn
Models/Utils/Timer/: Timer.dzn  TimerSkel.dzn
Models/Utils/UpdateLoop/: UpdateLoop.dzn  UpdateLoopSkel.dzn
